css/style.css
/* ... */
.about .about-content .personal-info .info-item p span
{
    font-weight: 400;
    color: var(--text-black-700);
    margin-left: 4px;
    display: inline-block;
}
.about .about-content .personal-info .buttons
{
    margin-top: 30px;
}
.about .about-content .personal-info .buttons .btn
{
    margin-top: 10px;
}
.about .about-content .skills
{
    flex: 0 0 40%;
    max-width: 40%;
    margin-top: 40px;
}
.about .about-content .skills .skill-item
{
    flex: 0 0 100%;
    max-width: 100%;
}
.about .about-content .skills .skill-item h5
{
    line-height: 40px;
    font-weight: 600;
    font-size: 16px;
    color: var(--text-black-900);
    text-transform: capitalize;
}
.about .about-content .skills .skill-item .progress
{
    background-color: var(--bg-black-50);
    height: 7px;
    border-radius: 4px;
    width: 100%;
    position: relative;
}
.about .about-content .skills .skill-item
{
    margin-bottom: 25px;
}
.about .about-content .skills .skill-item .progress .progress-in
{
    position: absolute;
    left: 0;
    top: 0;
    height: 100%;
    border-radius: 4px;
    background-color: var(--skin-color);
}
.about .about-content .skills .skill-item .skill-percent
{
    position: absolute;
    right: 0;
    color: var(--text-black-900);
    top: -40px;
    font-weight: 400;
    line-height: 40px;
}
.about .about-content .education,
.about .about-content .experience
{
    flex: 0 0 50%;
    max-width: 50%;
    margin-top: 30px;
}
.about .about-content h3.title 
{
    font-size: 24px;
    margin-bottom: 30px;
    font-weight: 700;
    color: var(--text-black-900);
}
.about .about-content .timeline-box
{
    flex: 0 0 100%;
    max-width: 100%;
}
.about .about-content .timeline
{
    background-color: var(--bg-black-100);
    padding: 30px 15px;
    border: 1px solid var(--bg-black-50);
    border-radius: 10px;
    width: 100%;
    position: relative;
}
.about .about-content .timeline .timeline-item
{
    position: relative;
    padding-left: 37px;
    padding-bottom: 50px;
}
.about .about-content .timeline .timeline-item:last-child
{
    padding-bottom: 0;
}
.about .about-content .timeline .timeline-item::before
{
    content: '';
    width: 1px;
    position: absolute;
    height: 100%;
    left: 7px;
    top: 0;
    background-color: var(--skin-color);
}
.about .about-content .timeline .circle-dot
{
    position: absolute;
    left: 0;
    top: 0;
    height: 15px;
    width: 15px;
    border-radius: 50%;
    background-color: var(--skin-color);
}
.about .about-content .timeline .timeline-date
{
    font-weight: 400;
    font-size: 14px;
    margin-bottom: 12px;
    color: var(--text-black-700);
}
.about .about-content .timeline .timeline-date .fa 
{
    margin-right: 5px;
}
.about .about-content .timeline .timeline-title
{
    font-weight: 700;
    font-size: 18px;
    margin-bottom: 15px;
    text-transform: capitalize;
    color: var(--text-black-900);
}
.about .about-content .timeline .timeline-text
{
    line-height: 25px;
    font-size: 16px;
    text-align: justify;
    color: var(--text-black-700);
}

/* service */
.service .container
{
    padding-bottom: 40px;
}
.service .service-item
{
    margin-bottom: 30px;
    flex: 0 0 33.33%;
    max-width: 33.33%;
}
.service .service-item .service-item-inner
{
    background-color: var(--bg-black-100);
    border: 1px solid var(--bg-black-50);
    border-radius: 10px;
    padding: 30px 15px;
    text-align: center;
    transition: all 0.3S ease;
}
.service .service-item .service-item-inner:hover
{
    box-shadow:  0 0 20px rgba(48, 46, 77, 0.15);
}
.service .service-item .service-item-inner .icon 
{
    height: 60px;
    width: 60px;
    border-radius: 50%;
    display: block;
    margin:  0 auto 30px;
    text-align: center;
    transition: all 0.3s ease;
}
.service .service-item .service-item-inner .icon .fa
{
    font-size: 40px;
    line-height: 60px;
    color: var(--skin-color);
    transition: all 0.3s ease;
}
.service .service-item .service-item-inner:hover .icon
{
    background: var(--skin-color);
}
.service .service-item .service-item-inner:hover .icon .fa
{
    font-size: 25px;
    color: #ffffff;
}
.service .service-item .service-item-inner h4
{
    font-size: 18px;
    margin-bottom: 15px;
    color: var(--text-black-900);
    font-weight: 700;
    text-transform: capitalize;
}
.service .service-item .service-item-inner p
{
    font-size: 16px;
    color: var(--text-black-700);
    line-height: 25px;
}
/* portfolio */
.portfolio .container
{
    padding-bottom: 40px;
}
.portfolio .portfolio-heading
{
    flex: 0 0 100%;
    max-width: 100%;
    margin-bottom: 40px;
}
.portfolio .portfolio-heading h2
{
    color: var(--text-black-900);
    font-weight: 500;
}
.portfolio .portfolio-item
{
    flex: 0 0 33.33%;
    max-width: 33.33%;
    margin-bottom: 30px;
}
.portfolio .portfolio-item-inner
{
    border: 6px solid var(--bg-black-100);
    border-radius: 10px;
    overflow: hidden;
    cursor: pointer;
}
.portfolio .portfolio-item-inner .portfolio-img img
{
    width: 100%;
    display: block;
}
/* contact */
.contact-title
{
    color: var(--skin-color);
    text-align: center;
    font-size: 25px;
    margin-bottom: 20px;
}
.contact-sub-title
{
    color: var(--text-black-900);
    text-align: center;
    font-size: 15px;
    margin-bottom: 60px;
}
.contact .contact-info-item
{
    flex: 0 0 25%;
    max-width: 25%;
    text-align: center;
    margin-bottom: 60px;
}
.contact .contact-info-item .icon
{
    display: inline-block;
}
.contact .contact-info-item .icon .fa
{
    font-size: 25px;
    color: var(--skin-color);
}
.contact .contact-info-item h4
{
    font-size: 18px;
    font-weight: 700;
    color: var(--text-black-900);
    text-transform: capitalize;
    margin: 15px 0 5px;
}
.contact .contact-info-item p
{
    font-size: 16px;
    line-height: 25px;
    color: var(--text-black-700);
    font-weight: 400;
}
.contact .contact-form
{
    flex: 0 0 100%;
    max-width: 100%;
}
/* ... */

